feat: activity frontend

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,8 @@
 <body>
   <main>{% block content %}{% endblock %}</main>
 
+  {% block templates %}{% endblock %}
+
   {% block scripts %}{% endblock %}
 </body>
 
