feat: vk play (+ cloud) activity support

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,9 +6,7 @@
     synzr {% include "emojis/fire.html" %}
   </span>
 
-  <div id="activity" class="loading">
-    Loading the activity information...
-  </div>
+  <div id="activity"></div>
 </div>
 
 <section id="about-me">
@@ -89,7 +87,7 @@
 {% block templates %}
 <template id="template-activity-game">
   <div id="activity">
-    Playing <a id="name">Game Name</a> <span id="icon"></span> using a
+    Playing <a id="name">Game Name</a> <span id="icon"></span> in a
     <span id="platform"></span>
   </div>
 </template>
