fix: no activity as a placeholder text

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,7 +6,9 @@
     synzr {% include "emojis/fire.html" %}
   </span>
 
-  <div id="activity"></div>
+  <div id="activity" class="loading">
+    No activity.
+  </div>
 </div>
 
 <section id="about-me">
