chore: :page_facing_up: mit license added

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -78,6 +78,12 @@
   </p>
   {% endif %}
 </section>
+
+<section>
+  <p>
+    Source code of this website is avaliable on <a href="https://github.com/synzr/synzr.ru">GitHub</a>.
+  </p>
+</section>
 {% endblock %}
 
 {% block styles %}
