--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
   {% block styles %}{% endblock %}
 </head>
 
-<body class="activity-background">
+<body>
   <main>{% block content %}{% endblock %}</main>
 
   {% block templates %}{% endblock %}
