--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -30,45 +30,59 @@
 
   <p id="contacts-social-media">
     {% if config.MASTODON_URL %}
-    <a href="{{ config.MASTODON_URL }}" rel="me" class="contact">
-      <img src="/static/img/logos/mastodon.svg" alt="Mastodon">
-    </a>
+    <div class="contact-wrapper">
+      <a href="{{ config.MASTODON_URL }}" rel="me" class="contact">
+        <img src="/static/img/logos/mastodon.svg" alt="Mastodon">
+      </a>
+    </div>
     {% endif %}
 
     {% if config.YOUTUBE_URL %}
-    <a href="{{ config.YOUTUBE_URL }}" rel="me" class="contact">
-      <img src="/static/img/logos/youtube.svg" alt="YouTube">
-    </a>
+    <div class="contact-wrapper">
+      <a href="{{ config.YOUTUBE_URL }}" rel="me" class="contact">
+        <img src="/static/img/logos/youtube.svg" alt="YouTube">
+      </a>
+    </div>
     {% endif %}
 
     {% if config.VKONTAKTE_URL %}
-    <a href="{{ config.VKONTAKTE_URL }}" rel="me" class="contact">
-      <img src="/static/img/logos/vkontakte.svg" alt="VK">
-    </a>
+    <div class="contact-wrapper">
+      <a href="{{ config.VKONTAKTE_URL }}" rel="me" class="contact">
+        <img src="/static/img/logos/vkontakte.svg" alt="VK">
+      </a>
+    </div>
     {% endif %}
 
     {% if config.VKPLAY_URL %}
-    <a href="{{ config.VKPLAY_URL }}" rel="me" class="contact">
-      <img src="/static/img/logos/vkplay.svg" alt="VK Play">
-    </a>
+    <div class="contact-wrapper">
+      <a href="{{ config.VKPLAY_URL }}" rel="me" class="contact">
+        <img src="/static/img/logos/vkplay.svg" alt="VK Play">
+      </a>
+    </div>
     {% endif %}
 
     {% if config.STEAM_URL %}
-    <a href="{{ config.STEAM_URL }}" rel="me" class="contact">
-      <img src="/static/img/logos/steam.svg" alt="Steam">
-    </a>
+    <div class="contact-wrapper">
+      <a href="{{ config.STEAM_URL }}" rel="me" class="contact">
+        <img src="/static/img/logos/steam.svg" alt="Steam">
+      </a>
+    </div>
     {% endif %}
 
     {% if config.TELEGRAM_URL %}
-    <a href="{{ config.TELEGRAM_URL }}" rel="me" class="contact">
-      <img src="/static/img/logos/telegram.svg" alt="Telegram">
-    </a>
+    <div class="contact-wrapper">
+      <a href="{{ config.TELEGRAM_URL }}" rel="me" class="contact">
+        <img src="/static/img/logos/telegram.svg" alt="Telegram">
+      </a>
+    </div>
     {% endif %}
 
     {% if config.MATRIX_URL %}
-    <a href="{{ config.MATRIX_URL }}" rel="me" class="contact">
-      <img src="/static/img/logos/matrix.svg" alt="Matrix">
-    </a>
+    <div class="contact-wrapper">
+      <a href="{{ config.MATRIX_URL }}" rel="me" class="contact">
+        <img src="/static/img/logos/matrix.svg" alt="Matrix">
+      </a>
+    </div>
     {% endif %}
   </p>
 
@@ -79,14 +93,8 @@
   {% endif %}
 </section>
 
-<section>
-  <p>
-    Source code of this website is avaliable on <a href="https://github.com/synzr/synzr.ru">GitHub</a>.
-  </p>
-</section>
-
-{% if config.FEDIRING_ENABLED %}
-<section id="fediring">
+<section id="fediring-and-github-link">
+  {% if config.FEDIRING_ENABLED %}
   <h1>Fediring</h1>
 
   <p id="fediring-links">
@@ -94,8 +102,12 @@
     <a href="https://fediring.net/">I'm feeling lucky</a>
     <a href="https://fediring.net/next?host={{ host }}">Next</a>
   </p>
+  {% endif %}
+  
+  <p id="github-link">
+    Source code of this website is avaliable on <a href="https://github.com/synzr/synzr.ru">GitHub</a>.
+  </p>
 </section>
-{% endif %}
 {% endblock %}
 
 {% block styles %}
