chore: :pencil2: minor typo in im feeling lucky url

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -99,11 +99,11 @@
 
   <p id="fediring-links">
     <a href="https://fediring.net/previous?host={{ host }}">Previous</a>
-    <a href="https://fediring.net/">I'm feeling lucky</a>
+    <a href="https://fediring.net/random">I'm feeling lucky</a>
     <a href="https://fediring.net/next?host={{ host }}">Next</a>
   </p>
   {% endif %}
-  
+
   <p id="github-link">
     Source code of this website is avaliable on <a href="https://github.com/synzr/synzr.ru">GitHub</a>.
   </p>
