chore: 6 icons in column -> 5 icons

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -22,7 +22,7 @@
 
   gap: var(--social-media-gap);
   grid-template-columns:
-    auto auto auto auto auto auto;
+    auto auto auto auto auto;
   
   width: max-content;
 }
