feat: france location for self-hosted services

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -53,6 +53,10 @@
   <p>
     <b>Note:</b> The server of all these self-services is located in the Netherlands.
   </p>
+  {% elif config.SELFHOSTED_NOTE_ABOUT_FR_LOCATION %}
+  <p>
+    <b>Note:</b> The server of all these self-services is located in the France.
+  </p>
   {% endif %}
 </section>
 {% endif %}
