--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -51,11 +51,11 @@
 
   {% if config.SELFHOSTED_NOTE_ABOUT_EU_LOCATION %}
   <p>
-    <b>Note:</b> The server of all these self-services is located in the Netherlands.
+    <b>Note:</b> The server of all these self-hosted services is located in the Netherlands.
   </p>
   {% elif config.SELFHOSTED_NOTE_ABOUT_FR_LOCATION %}
   <p>
-    <b>Note:</b> The server of all these self-services is located in the France.
+    <b>Note:</b> The server of all these self-hosted services is located in the France.
   </p>
   {% endif %}
 </section>
